[gd_scene load_steps=8 format=3 uid="uid://djwe8xhox1f64"]

[ext_resource type="Script" path="res://Editor/FlowMap.gd" id="1_x25ow"]
[ext_resource type="Texture2D" uid="uid://ha5n1xqim636" path="res://Editor/GridSmall.png" id="2_kmnm3"]
[ext_resource type="Texture2D" uid="uid://rxsyrxthkuuh" path="res://Editor/GridMedium.png" id="3_hi6lj"]
[ext_resource type="Script" path="res://Editor/Camera.gd" id="4_jn5v0"]
[ext_resource type="Script" path="res://Editor/VariableGroups.gd" id="5_l42xh"]

[sub_resource type="ButtonGroup" id="ButtonGroup_rtwqo"]

[sub_resource type="ButtonGroup" id="ButtonGroup_dendm"]

[node name="Map" type="Node2D" groups=["MapCore"]]
script = ExtResource("1_x25ow")
SmallGrid = ExtResource("2_kmnm3")
MediumGrid = ExtResource("3_hi6lj")

[node name="Camera" type="Camera2D" parent="."]
script = ExtResource("4_jn5v0")

[node name="UILayer" type="CanvasLayer" parent="Camera"]

[node name="WholeScreen" type="Control" parent="Camera/UILayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopPanel" type="PanelContainer" parent="Camera/UILayer"]
self_modulate = Color(0.658824, 0.745098, 0.988235, 1)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 71.0
grow_horizontal = 2

[node name="HBox" type="HBoxContainer" parent="Camera/UILayer/TopPanel"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="MapName" type="LineEdit" parent="Camera/UILayer/TopPanel/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Save" type="Button" parent="Camera/UILayer/TopPanel/HBox"]
layout_mode = 2
text = " Save "

[node name="Load" type="Button" parent="Camera/UILayer/TopPanel/HBox"]
layout_mode = 2
text = " Load "

[node name="New" type="Button" parent="Camera/UILayer/TopPanel/HBox"]
layout_mode = 2
text = " New "

[node name="VSeparator" type="VSeparator" parent="Camera/UILayer/TopPanel/HBox"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="NewEmpty" type="Button" parent="Camera/UILayer/TopPanel/HBox"]
layout_mode = 2
text = " New Flow List "

[node name="VSeparator2" type="VSeparator" parent="Camera/UILayer/TopPanel/HBox"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Variables" type="Button" parent="Camera/UILayer/TopPanel/HBox"]
layout_mode = 2
text = " Variables "

[node name="VSeparator3" type="VSeparator" parent="Camera/UILayer/TopPanel/HBox"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Export" type="Button" parent="Camera/UILayer/TopPanel/HBox"]
layout_mode = 2
text = " Export .txt "

[node name="FlowListBlock" type="ColorRect" parent="Camera/UILayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="Panel" type="PanelContainer" parent="Camera/UILayer/FlowListBlock"]
self_modulate = Color(0.184314, 0.176471, 0.282353, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.5
offset_top = -74.0
offset_right = 93.5
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="Camera/UILayer/FlowListBlock/Panel"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBox" type="VBoxContainer" parent="Camera/UILayer/FlowListBlock/Panel/Margin"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="Title" type="Label" parent="Camera/UILayer/FlowListBlock/Panel/Margin/VBox"]
layout_mode = 2
text = "New Flow List Instance"

[node name="HBox" type="HBoxContainer" parent="Camera/UILayer/FlowListBlock/Panel/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="EmptyCheck" type="CheckBox" parent="Camera/UILayer/FlowListBlock/Panel/Margin/VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
button_group = SubResource("ButtonGroup_rtwqo")
text = "Empty "

[node name="InstanceCheck" type="CheckBox" parent="Camera/UILayer/FlowListBlock/Panel/Margin/VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
button_group = SubResource("ButtonGroup_dendm")
text = "Instance "

[node name="InstanceSelect" type="OptionButton" parent="Camera/UILayer/FlowListBlock/Panel/Margin/VBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBox2" type="HBoxContainer" parent="Camera/UILayer/FlowListBlock/Panel/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Create" type="Button" parent="Camera/UILayer/FlowListBlock/Panel/Margin/VBox/HBox2"]
self_modulate = Color(0.47451, 0.988235, 0.611765, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "Create"

[node name="Cancel" type="Button" parent="Camera/UILayer/FlowListBlock/Panel/Margin/VBox/HBox2"]
self_modulate = Color(0.988235, 0.541176, 0.541176, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel
"

[node name="FlowMapBlock" type="ColorRect" parent="Camera/UILayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="Panel" type="PanelContainer" parent="Camera/UILayer/FlowMapBlock"]
self_modulate = Color(0.184314, 0.176471, 0.282353, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.5
offset_top = -74.0
offset_right = 93.5
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="Camera/UILayer/FlowMapBlock/Panel"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBox" type="VBoxContainer" parent="Camera/UILayer/FlowMapBlock/Panel/Margin"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="Title" type="Label" parent="Camera/UILayer/FlowMapBlock/Panel/Margin/VBox"]
layout_mode = 2
text = "Load Flow Map"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="Camera/UILayer/FlowMapBlock/Panel/Margin/VBox"]
layout_mode = 2

[node name="FileDirectory" type="LineEdit" parent="Camera/UILayer/FlowMapBlock/Panel/Margin/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Scan Directory"
flat = true

[node name="SetDirectory" type="Button" parent="Camera/UILayer/FlowMapBlock/Panel/Margin/VBox/HBox"]
layout_mode = 2
text = " Set "

[node name="MapSelect" type="OptionButton" parent="Camera/UILayer/FlowMapBlock/Panel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBox2" type="HBoxContainer" parent="Camera/UILayer/FlowMapBlock/Panel/Margin/VBox"]
layout_mode = 2

[node name="Load" type="Button" parent="Camera/UILayer/FlowMapBlock/Panel/Margin/VBox/HBox2"]
self_modulate = Color(0.47451, 0.988235, 0.611765, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "Load"

[node name="Cancel" type="Button" parent="Camera/UILayer/FlowMapBlock/Panel/Margin/VBox/HBox2"]
self_modulate = Color(0.988235, 0.541176, 0.541176, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel
"

[node name="FileDialog" type="FileDialog" parent="Camera/UILayer/FlowMapBlock"]
title = "Open a Directory"
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="VariablesBlock" type="ColorRect" parent="Camera/UILayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="Panel" type="PanelContainer" parent="Camera/UILayer/VariablesBlock"]
self_modulate = Color(0.184314, 0.176471, 0.282353, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.5
offset_top = -74.0
offset_right = 93.5
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="Camera/UILayer/VariablesBlock/Panel"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBox" type="VBoxContainer" parent="Camera/UILayer/VariablesBlock/Panel/Margin"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="Title" type="Label" parent="Camera/UILayer/VariablesBlock/Panel/Margin/VBox"]
layout_mode = 2
text = "Variables"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Camera/UILayer/VariablesBlock/Panel/Margin/VBox"]
layout_mode = 2
text = "New Group"

[node name="Groups" type="HBoxContainer" parent="Camera/UILayer/VariablesBlock/Panel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 15
script = ExtResource("5_l42xh")

[node name="HBox2" type="HBoxContainer" parent="Camera/UILayer/VariablesBlock/Panel/Margin/VBox"]
layout_mode = 2

[node name="Exit" type="Button" parent="Camera/UILayer/VariablesBlock/Panel/Margin/VBox/HBox2"]
self_modulate = Color(0.988235, 0.541176, 0.541176, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "Exit"

[node name="MapBG" type="TextureRect" parent="."]
self_modulate = Color(0.121569, 0.121569, 0.121569, 1)
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
stretch_mode = 1

[connection signal="pressed" from="Camera/UILayer/TopPanel/HBox/Save" to="." method="Save"]
[connection signal="pressed" from="Camera/UILayer/TopPanel/HBox/Load" to="." method="OpenFlowMapPanel"]
[connection signal="pressed" from="Camera/UILayer/TopPanel/HBox/New" to="." method="NewFlowMap"]
[connection signal="pressed" from="Camera/UILayer/TopPanel/HBox/NewEmpty" to="." method="OpenNewFlowListPanel"]
[connection signal="pressed" from="Camera/UILayer/TopPanel/HBox/Variables" to="." method="OpenVariablesBlock"]
[connection signal="pressed" from="Camera/UILayer/TopPanel/HBox/Export" to="." method="ExportTextFormat"]
[connection signal="pressed" from="Camera/UILayer/FlowListBlock/Panel/Margin/VBox/HBox/EmptyCheck" to="." method="SetInstanceIndex" binds= [-1]]
[connection signal="pressed" from="Camera/UILayer/FlowListBlock/Panel/Margin/VBox/HBox/InstanceCheck" to="." method="SetInstanceIndex" binds= [0]]
[connection signal="item_selected" from="Camera/UILayer/FlowListBlock/Panel/Margin/VBox/InstanceSelect" to="." method="SetInstanceIndex"]
[connection signal="pressed" from="Camera/UILayer/FlowListBlock/Panel/Margin/VBox/HBox2/Create" to="." method="CreateNewFlowList"]
[connection signal="pressed" from="Camera/UILayer/FlowListBlock/Panel/Margin/VBox/HBox2/Cancel" to="." method="CloseNewFlowListPanel"]
[connection signal="text_submitted" from="Camera/UILayer/FlowMapBlock/Panel/Margin/VBox/HBox/FileDirectory" to="." method="SetScanDirectory"]
[connection signal="pressed" from="Camera/UILayer/FlowMapBlock/Panel/Margin/VBox/HBox/SetDirectory" to="Camera/UILayer/FlowMapBlock/FileDialog" method="popup_centered"]
[connection signal="pressed" from="Camera/UILayer/FlowMapBlock/Panel/Margin/VBox/HBox2/Load" to="." method="LoadSelected"]
[connection signal="pressed" from="Camera/UILayer/FlowMapBlock/Panel/Margin/VBox/HBox2/Cancel" to="." method="CloseFlowMapPanel"]
[connection signal="dir_selected" from="Camera/UILayer/FlowMapBlock/FileDialog" to="Camera/UILayer/FlowMapBlock/Panel/Margin/VBox/HBox/FileDirectory" method="set_text"]
[connection signal="pressed" from="Camera/UILayer/VariablesBlock/Panel/Margin/VBox/Button" to="Camera/UILayer/VariablesBlock/Panel/Margin/VBox/Groups" method="CreateNewGroup"]
[connection signal="pressed" from="Camera/UILayer/VariablesBlock/Panel/Margin/VBox/HBox2/Exit" to="." method="CloseVariablesBlock"]
